[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/Autoloads/Dbg/DbgConsole/DbgConsole.gd" type="Script" id=1]
[ext_resource path="res://Src/Autoloads/Dbg/DbgConsole/CommandHandler.gd" type="Script" id=2]

[node name="DebugConsole" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1720.0
margin_bottom = 880.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
margin_right = 1720.0
margin_bottom = 836.0
focus_mode = 0
size_flags_vertical = 3
text = "DebugConsole [~ enable/disable]"
readonly = true
fold_gutter = true
highlight_all_occurrences = true
context_menu_enabled = false
smooth_scrolling = true
wrap_enabled = true
minimap_draw = true

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 856.0
margin_right = 1720.0
margin_bottom = 880.0

[node name="CommandHandler" type="Node" parent="."]
script = ExtResource( 2 )
[connection signal="text_entered" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="clear_console" from="CommandHandler" to="." method="_on_CommandHandler_clear_console"]
